Update Documentation and change name to VariantReport

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export(ClassficationDe)
 export(ClassficationFr)
 export(activityList_format)
 export(add_interpretation_columns)
+export(add_strand_ratios)
 export(annotateWatchdogTables)
 export(diagnose_D_F_columns_snv)
+export(display_std_metrics)
+export(display_variants)
 export(mtbpFormat)
 export(orderSignificance)
 export(read_COSMIC)
