--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: VariantReporting
-Title: What the Package Does (One Line, Title Case)
+Package: VariantReport
+Title: Report Variants in Rmarkdown
 Version: 0.0.0.9000
 Authors@R: 
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
